--- a/Index.html
+++ b/Index.html
@@ -92,8 +92,9 @@
     <aside>
             <Br>
             <h2>Minha empresa</h2>
-            <p>Empresa doméstica no mercado a mais de cinco anos, trabalhamos como Designer Gráfico desenvolvendo projetos de identidade visual, visando
-                uma apresentação da sua empresa com qualidade e beleza.<Br>
+            <p> Profissional Joaquim Batista, Desiner Gráfico está no mercado a mais de cinco anos, para desenvolver melhor seus trabalhos
+                abriu a microemprasa "JB Comunicação Visual", deasenvolvemos projetos de identidade visual, visando uma apresentação da sua
+                empresa com qualidade e beleza.<Br>
                 Produtos como <b>FAIXADAS, PLACAS EM LONA, LETREIROS EM ACRÍLICOS, ENVELAPAMENTO DE ELETRODOMESTICOS</b>, entre outros.<Br>
                 Aguardando seu contato para juntos desevelvermos um projeto especial de Comunicação Visual, atraente, cores vivas e
                 iluminação especial para impactar a apresentação da sua empresa. </p>
